Fix [General] igzActionMenu: align no-icon options (#782)

--- a/src/igz_controls/components/action-menu/action-menu.less
+++ b/src/igz_controls/components/action-menu/action-menu.less
@@ -73,6 +73,13 @@
                 display: inline-block;
                 padding-right: 14px;
 
+                &.fake-icon {
+                    &:before {
+                        content: '';
+                        display: inline-block;
+                    }
+                }
+
                 &:before {
                     font-size: 16px;
                     position: relative;
